# msimexper

./: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml  reftest.md  server.py  server_core.py
core/: auth_layer1.py  contact_layer2.py  fanout.py  messaging_layer3.py  packet.py  server_core.py
msim/: apps.py  models.py  urls.py  views.py
msim/migrations/: 0001_initial.py  0002_contact.py  0003_remove_contact_contact_mid.py  0004_auto_20191128_1412.py  0005_contact_caption.py  0006_privatechat_privatechatmessage_privatechatreference.py  0007_auto_20200108_1458.py  0008_auto_20200108_1459.py
msimexper/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
script/: bootstrap  console  server  setup  test  update
