[tool.poetry]
name = "msimexper"
version = "0.1.0"
description = ""
authors = ["m1kc (Max Musatov) <m1kc@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9.2"
arrow = "^0.15.4"
jsonschema = "^3.2"
channels = "^2.4.0"
Django = "^3.2.25"
uvicorn = {version = "^0.14.0", extras = ["standard"]}
ipython = "^8.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
